fix inactive buttons and z-index position error

--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,10 @@ body{
    justify-content: space-between;
    align-items: center;
    padding: 20px 10%;
-   z-index: 100;
    background-color: white;
    width: 100%;
+   position: relative;
+   z-index: auto;
 }
 
 .fixed-nav{
